// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render correct panels. > DynamicSelect > should render Dynamic Select correctly with existing options 1`] = `
<div>
  <div
    class="awsui_root_r2vco_wvvus_99"
  >
    <div
      class="awsui_root_qwoo0_1ea5w_149"
    >
      <div
        class=""
        id=":r6:"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="select-arialabel-:r4: trigger-content-:r8:"
          class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
          id="trigger:r1:"
          type="button"
        >
          <span
            class="awsui_trigger_dwuol_18z0d_122"
            id="trigger-content-:r8:"
          >
            10 units
          </span>
          <span
            class="awsui_arrow_18eso_syr88_103"
          >
            <span
              class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="filled stroke-linejoin-round"
                  d="M4 5h8l-4 6-4-6z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        tabindex="-1"
      />
      <div>
        <div
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
          data-animating="false"
          data-open="false"
          id="dialog:r3:"
          style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
        >
          <div
            class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
          >
            <div
              class="awsui_dropdown-content_qwoo0_1ea5w_99"
            >
              <ul
                aria-labelledby="select-arialabel-:r4: trigger:r1:"
                class="awsui_options-list_19gcf_halkh_99"
                id="option-list:r2:"
                role="listbox"
                style="position: relative;"
                tabindex="-1"
              />
              <div
                class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
              >
                <div
                  id="footer:r5:"
                />
                <span
                  class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                >
                  <span
                    aria-atomic="true"
                    aria-live="polite"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          tabindex="-1"
        />
      </div>
    </div>
    <span
      class="awsui_root_xttbq_pgwjg_99"
      id="select-arialabel-:r4:"
    />
  </div>
</div>
`;

exports[`render correct panels. > DynamicSelect > should render Dynamic Select correctly with new option 1`] = `
<div>
  <div
    class="awsui_root_r2vco_wvvus_99"
  >
    <div
      class="awsui_root_qwoo0_1ea5w_149"
    >
      <div
        class=""
        id=":re:"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="select-arialabel-:rc: trigger-content-:rg:"
          class="awsui_button-trigger_18eso_syr88_103 awsui_has-caret_18eso_syr88_170"
          id="trigger:r9:"
          type="button"
        >
          <span
            class="awsui_trigger_dwuol_18z0d_122"
            id="trigger-content-:rg:"
          >
            15 units
          </span>
          <span
            class="awsui_arrow_18eso_syr88_103"
          >
            <span
              class="awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="filled stroke-linejoin-round"
                  d="M4 5h8l-4 6-4-6z"
                />
              </svg>
            </span>
          </span>
        </button>
      </div>
      <div
        tabindex="-1"
      />
      <div>
        <div
          tabindex="-1"
        />
        <div
          aria-hidden="true"
          class="awsui_dropdown_qwoo0_1ea5w_99 awsui-visual-refresh awsui_hide-block-border_qwoo0_1ea5w_281 awsui_refresh_qwoo0_1ea5w_120 awsui_stretch-beyond-trigger-width_qwoo0_1ea5w_277"
          data-animating="false"
          data-open="false"
          id="dialog:rb:"
          style="--awsui-dropdown-default-max-width-iof9y8: 465px;"
        >
          <div
            class="awsui_dropdown-content-wrapper_qwoo0_1ea5w_99 awsui_refresh_qwoo0_1ea5w_120"
          >
            <div
              class="awsui_dropdown-content_qwoo0_1ea5w_99"
            >
              <ul
                aria-labelledby="select-arialabel-:rc: trigger:r9:"
                class="awsui_options-list_19gcf_halkh_99"
                id="option-list:ra:"
                role="listbox"
                style="position: relative;"
                tabindex="-1"
              />
              <div
                class="awsui_root_1afi9_5kqbd_99 awsui_hidden_1afi9_5kqbd_133"
              >
                <div
                  id="footer:rd:"
                />
                <span
                  class="awsui_root_xttbq_pgwjg_99 awsui_root_3bgfn_im8v7_5"
                >
                  <span
                    aria-atomic="true"
                    aria-live="polite"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          tabindex="-1"
        />
      </div>
    </div>
    <span
      class="awsui_root_xttbq_pgwjg_99"
      id="select-arialabel-:rc:"
    />
  </div>
</div>
`;

exports[`render correct panels. > render ExpandableInfoSection correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-gsFSXq ewmopI awsui_root_gwq0h_xoje_157"
      >
        <div
          aria-controls=":r0:"
          aria-expanded="true"
          class="awsui_header_gwq0h_xoje_252 awsui_wrapper_gwq0h_xoje_220 awsui_wrapper-default_gwq0h_xoje_228 awsui_wrapper-expanded_gwq0h_xoje_274 awsui_focusable_gwq0h_xoje_405 awsui_expanded_gwq0h_xoje_202 awsui_expand-button_gwq0h_xoje_195 awsui_click-target_gwq0h_xoje_420 awsui_header-deprecated_gwq0h_xoje_252"
          id=":r0:-trigger"
          role="button"
          tabindex="0"
        >
          <div
            class="awsui_icon-container_gwq0h_xoje_212"
          >
            <span
              class="awsui_icon_gwq0h_xoje_139 awsui_expanded_gwq0h_xoje_202 awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
            >
              <svg
                aria-hidden="true"
                focusable="false"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="filled stroke-linejoin-round"
                  d="M4 5h8l-4 6-4-6z"
                />
              </svg>
            </span>
          </div>
          <div
            class="sc-dcJsrY ilhrxw"
          >
            <div
              class="awsui_text-content_6absk_1rcdq_100"
            >
              <strong>
                testTile
              </strong>
            </div>
          </div>
        </div>
        <div
          aria-labelledby=":r0:-trigger"
          class="awsui_content_gwq0h_xoje_103 awsui_content-default_gwq0h_xoje_390 awsui_content-expanded_gwq0h_xoje_398"
          id=":r0:"
          role="group"
        >
          <div
            class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-top-xxs_18wu0_1elzt_591 awsui_p-right-m_18wu0_1elzt_671 awsui_p-bottom-xxs_18wu0_1elzt_601 awsui_p-left-m_18wu0_1elzt_681 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
          >
            <div
              class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-gsFSXq ewmopI awsui_root_gwq0h_xoje_157"
    >
      <div
        aria-controls=":r0:"
        aria-expanded="true"
        class="awsui_header_gwq0h_xoje_252 awsui_wrapper_gwq0h_xoje_220 awsui_wrapper-default_gwq0h_xoje_228 awsui_wrapper-expanded_gwq0h_xoje_274 awsui_focusable_gwq0h_xoje_405 awsui_expanded_gwq0h_xoje_202 awsui_expand-button_gwq0h_xoje_195 awsui_click-target_gwq0h_xoje_420 awsui_header-deprecated_gwq0h_xoje_252"
        id=":r0:-trigger"
        role="button"
        tabindex="0"
      >
        <div
          class="awsui_icon-container_gwq0h_xoje_212"
        >
          <span
            class="awsui_icon_gwq0h_xoje_139 awsui_expanded_gwq0h_xoje_202 awsui_icon_h11ix_1l964_104 awsui_size-normal-mapped-height_h11ix_1l964_158 awsui_size-normal_h11ix_1l964_154 awsui_variant-normal_h11ix_1l964_230"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="filled stroke-linejoin-round"
                d="M4 5h8l-4 6-4-6z"
              />
            </svg>
          </span>
        </div>
        <div
          class="sc-dcJsrY ilhrxw"
        >
          <div
            class="awsui_text-content_6absk_1rcdq_100"
          >
            <strong>
              testTile
            </strong>
          </div>
        </div>
      </div>
      <div
        aria-labelledby=":r0:-trigger"
        class="awsui_content_gwq0h_xoje_103 awsui_content-default_gwq0h_xoje_390 awsui_content-expanded_gwq0h_xoje_398"
        id=":r0:"
        role="group"
      >
        <div
          class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_p-top-xxs_18wu0_1elzt_591 awsui_p-right-m_18wu0_1elzt_671 awsui_p-bottom-xxs_18wu0_1elzt_601 awsui_p-left-m_18wu0_1elzt_681 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
        >
          <div
            class="awsui_root_18582_z63vw_99 awsui_vertical_18582_z63vw_146 awsui_vertical-s_18582_z63vw_158"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`render correct panels. > render Matrix3XInputGrid correctly. 1`] = `
<div>
  <div
    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
  >
    <div
      class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
    >
      <label
        id="gridName_label"
      >
        gridName
      </label>
    </div>
     
    <div
      class="awsui_grid_14yj0_1lwse_99"
    >
      <div
        class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-4_14yj0_1lwse_184"
      >
        <div
          class="awsui_restore-pointer-events_14yj0_1lwse_314"
        >
          <div
            class="sc-gEvEer dfsMpp"
          >
            <div
              class="sc-fqkvVR bxVbvh"
            >
              <div
                class="awsui_text-content_6absk_1rcdq_100"
              >
                <label
                  for="gridName_input_l1"
                >
                  l1
                </label>
                 
              </div>
            </div>
            <div
              class="sc-iGgWBj kumTxJ"
            >
              <div
                class="awsui_root_2rhyz_15wpl_99 awsui_input-container_2rhyz_15wpl_262"
              >
                <input
                  aria-labelledby="gridName_input_l1 gridName_label"
                  autocomplete="on"
                  class="awsui_input_2rhyz_15wpl_103"
                  id="gridName_input_l1"
                  type="text"
                  value="1"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-4_14yj0_1lwse_184"
      >
        <div
          class="awsui_restore-pointer-events_14yj0_1lwse_314"
        >
          <div
            class="sc-gEvEer dfsMpp"
          >
            <div
              class="sc-fqkvVR bxVbvh"
            >
              <div
                class="awsui_text-content_6absk_1rcdq_100"
              >
                <label
                  for="gridName_input_l2"
                >
                  l2
                </label>
                 
              </div>
            </div>
            <div
              class="sc-iGgWBj kumTxJ"
            >
              <div
                class="awsui_root_2rhyz_15wpl_99 awsui_input-container_2rhyz_15wpl_262"
              >
                <input
                  aria-labelledby="gridName_input_l2 gridName_label"
                  autocomplete="on"
                  class="awsui_input_2rhyz_15wpl_103"
                  id="gridName_input_l2"
                  type="text"
                  value="2"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-4_14yj0_1lwse_184"
      >
        <div
          class="awsui_restore-pointer-events_14yj0_1lwse_314"
        >
          <div
            class="sc-gEvEer dfsMpp"
          >
            <div
              class="sc-fqkvVR bxVbvh"
            >
              <div
                class="awsui_text-content_6absk_1rcdq_100"
              >
                <label
                  for="gridName_input_l3"
                >
                  l3
                </label>
                 
              </div>
            </div>
            <div
              class="sc-iGgWBj kumTxJ"
            >
              <div
                class="awsui_root_2rhyz_15wpl_99 awsui_input-container_2rhyz_15wpl_262"
              >
                <input
                  aria-labelledby="gridName_input_l3 gridName_label"
                  autocomplete="on"
                  class="awsui_input_2rhyz_15wpl_103"
                  id="gridName_input_l3"
                  type="text"
                  value="3"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render correct panels. > render Matrix3XInputGrid readonly correctly. 1`] = `
<div>
  <div
    class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
  >
    <div
      class="awsui_root_18wu0_1elzt_99 awsui_box_18wu0_1elzt_219 awsui_m-bottom-xxs_18wu0_1elzt_851 awsui_color-default_18wu0_1elzt_219 awsui_font-size-default_18wu0_1elzt_235 awsui_font-weight-default_18wu0_1elzt_275"
    >
      <label
        id="gridName_label"
      >
        gridName
      </label>
    </div>
     
    <div
      class="awsui_grid_14yj0_1lwse_99"
    >
      <div
        class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-4_14yj0_1lwse_184"
      >
        <div
          class="awsui_restore-pointer-events_14yj0_1lwse_314"
        >
          <div
            class="sc-gEvEer dfsMpp"
          >
            <div
              class="sc-fqkvVR bxVbvh"
            >
              <div
                class="awsui_text-content_6absk_1rcdq_100"
              >
                <label
                  for="gridName_input_l1"
                >
                  l1
                </label>
                 
              </div>
            </div>
            <div
              class="sc-iGgWBj kumTxJ"
            >
              <div
                class="awsui_text-content_6absk_1rcdq_100"
              >
                 
                1
                 
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-4_14yj0_1lwse_184"
      >
        <div
          class="awsui_restore-pointer-events_14yj0_1lwse_314"
        >
          <div
            class="sc-gEvEer dfsMpp"
          >
            <div
              class="sc-fqkvVR bxVbvh"
            >
              <div
                class="awsui_text-content_6absk_1rcdq_100"
              >
                <label
                  for="gridName_input_l2"
                >
                  l2
                </label>
                 
              </div>
            </div>
            <div
              class="sc-iGgWBj kumTxJ"
            >
              <div
                class="awsui_text-content_6absk_1rcdq_100"
              >
                 
                2
                 
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="awsui_grid-column_14yj0_1lwse_143 awsui_colspan-4_14yj0_1lwse_184"
      >
        <div
          class="awsui_restore-pointer-events_14yj0_1lwse_314"
        >
          <div
            class="sc-gEvEer dfsMpp"
          >
            <div
              class="sc-fqkvVR bxVbvh"
            >
              <div
                class="awsui_text-content_6absk_1rcdq_100"
              >
                <label
                  for="gridName_input_l3"
                >
                  l3
                </label>
                 
              </div>
            </div>
            <div
              class="sc-iGgWBj kumTxJ"
            >
              <div
                class="awsui_text-content_6absk_1rcdq_100"
              >
                 
                3
                 
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
